Fixed line spacing in content div

--- a/styles/welcome.css
+++ b/styles/welcome.css
@@ -12,6 +12,7 @@
   font-size: 20px;
   padding-left: 40px;
   padding-right: 40px;
+  line-height: 1.3em;
 }
 
 #Footer{
